--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "sequelize:migrate": "npx tsc && npx sequelize db:migrate",
     "start:dev": "nodemon --watch \"src/\" --exec \"npx ts-node src/app.ts\" -e ts",
-    "start:build": "nodemon dist/app.js"
+    "start:build": "tsc && nodemon dist/app.js"
   },
   "devDependencies": {
     "@types/express": "^4.17.12",
@@ -24,6 +24,7 @@
     "pg-hstore": "^2.3.3",
     "reflect-metadata": "^0.1.13",
     "sequelize": "^6.6.2",
-    "sequelize-typescript": "^2.1.0"
+    "sequelize-typescript": "^2.1.0",
+    "tsyringe": "^4.6.0"
   }
 }
